# raytracer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
RayTracerApp/: CMakeLists.txt
RayTracerApp/src/: main.cpp
RayTracerApp/tests/: cornell_box_fog_scene.h  cornell_box_scene.h  earth_scene.h  mirror_scene.h  random_scene.h  two_noise_spheres_scene.h  two_spheres_scene.h  ultimate_scene.h
RayTracerLib/: CMakeLists.txt
RayTracerLib/include/common/: core.h
RayTracerLib/include/concurrency/: ringbuffer.h  semaphore.h
RayTracerLib/include/materials/: diffuse_light.h  isotropic.h  material.h  metal.h
RayTracerLib/include/objects/: BVHNode.h  BVHRect.h  Box.h  ConstantMedium.h  hittable.h  hittablelist.h  instance.h  moving_sphere.h
RayTracerLib/include/renderer/: camera.h  image.h  ray.h  renderer.h  renderer_objects.h
RayTracerLib/include/scenes/: scene.h
RayTracerLib/include/textures/: checker_texture.h  image_texture.h  noise_texture.h  perlin.h  solid_color.h  texture.h
RayTracerLib/src/concurrency/: semaphore.cpp  threadpool.cpp
RayTracerLib/src/materials/: dielectric.cpp  diffuse_light.cpp  isotropic.cpp  lambertian.cpp  metal.cpp
RayTracerLib/src/objects/: BVHNode.cpp  BVHRect.cpp  Box.cpp  ConstantMedium.cpp  hittablelist.cpp  instance.cpp  moving_sphere.cpp  sphere.cpp
RayTracerLib/src/renderer/: camera.cpp  ray.cpp  renderer.cpp
RayTracerLib/src/textures/: image_texture.cpp
docs/: Resources.md
products/: cornells_box.ppm  cornells_box_fog.ppm
products/images/: cornell_with_box.ppm  earth.ppm  image3.ppm  (+11 more)
src/: main.cpp
(+40 files in other folders)
